--- a/assets/sass/globals/_settings.scss
+++ b/assets/sass/globals/_settings.scss
@@ -72,6 +72,8 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
   outline: 0; 
   vertical-align: baseline; 
   background: transparent;
+  -webkit-font-smoothing: antialiased;
+  box-sizing: border-box;
 }
 blockquote, q {
   quotes: none;
