--- a/assets/sass/partials/_work.scss
+++ b/assets/sass/partials/_work.scss
@@ -23,6 +23,12 @@
 		figure {
 			margin: 0;
 			
+			a {
+				position: relative;
+				display: block;
+				@extend %clearfix;
+			}
+
 			img {
 				border: 1px solid #f1f1f1;
 			}
@@ -33,6 +39,10 @@
 			font-size: 1.5em;
 			font-weight: 400;
 			color: rgba(0, 0, 0, .8);
+		}
+		
+		p {
+			margin: 0;
 		}
 		
 	}
