--- a/assets/sass/globals/_general.scss
+++ b/assets/sass/globals/_general.scss
@@ -27,7 +27,11 @@ p {
 }
 
 section {
-	padding: 3em 0;
+	padding: 2em 1em;
+	
+	@include bp-m {
+		padding: 3em 1em;
+	}
 	
 	h2 {
 		margin: 0 0 .5em;
