Adding simple contact section

--- a/assets/sass/globals/_general.scss
+++ b/assets/sass/globals/_general.scss
@@ -43,6 +43,16 @@ section {
 	
 }
 
+a {
+	color: #204194;
+	text-decoration: none;
+	transition: all .2s;
+	
+	&:hover {
+		color: #6f8cd6;
+	}
+}
+
 /* ==========================================================================
 	Media
 ============================================================================= */	
