--- a/assets/sass/styles.scss
+++ b/assets/sass/styles.scss
@@ -10,6 +10,9 @@ Version: 1.0
 	
 	//Vendor
 	"vendor/normalize",	
+
+	//Modules
+	"modules/icon-font",
 	
 	//Globals
 	"globals/settings",
@@ -19,6 +22,5 @@ Version: 1.0
 	//Partials
 	"partials/header",
 	"partials/work",
-	"partials/about";
-	
-	//Modules
+	"partials/about",
+	"partials/contact";
