--- a/assets/sass/globals/_general.scss
+++ b/assets/sass/globals/_general.scss
@@ -35,16 +35,20 @@ section {
 	
 	h2 {
 		margin: 0 0 .5em;
-		font-size: 2.5em;
+		font-size: 2em;
 		font-weight: 300;
 		text-transform: uppercase;
 		color: #2c333b;
+		
+		@include bp-m {
+			font-size: 2.5em;
+		}
 	}
 	
 }
 
 a {
-	color: #204194;
+	color: #58778D;
 	text-decoration: none;
 	transition: all .2s;
 	
