minor tweaks to colors, spacing

--- a/assets/sass/partials/_contact.scss
+++ b/assets/sass/partials/_contact.scss
@@ -15,6 +15,7 @@
 	@include bp-l {
 		padding: 12em 0 8em;
 		background-image: url('../img/bg_contact.jpg');
+		background-position: center center;
 	}
 	
 	h2 {
