--- a/assets/sass/partials/_work.scss
+++ b/assets/sass/partials/_work.scss
@@ -52,7 +52,7 @@
 		}
 		
 		h3 {
-			margin: .5em 0 0;
+			margin: .5em 0 .25em;
 			font-size: 1.5em;
 			font-weight: 400;
 			color: rgba(0, 0, 0, .8);
