--- a/assets/sass/partials/_contact.scss
+++ b/assets/sass/partials/_contact.scss
@@ -4,7 +4,7 @@
 
 .contact {
 	position: relative;
-	padding: 10em 1em 2em;
+	padding: 12em 1em 2em;
 	background: url('../img/bg_contact-small.jpg');
 	background-size: 100% auto;
 	background-repeat: no-repeat;
@@ -13,8 +13,11 @@
 	text-align: center;
 	
 	@include bp-l {
-		padding: 12em 0 8em;
+		padding: 12em 1em 8em;
 		background-image: url('../img/bg_contact.jpg');
+	}
+	
+	@include bp-xl {
 		background-position: center center;
 	}
 	
@@ -50,6 +53,7 @@
 			@include bp-m {
 				font-size: 3em;
 			}
+
 		}
 	}	
 }
